--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.jar=${dist.dir}/BazyDanych.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.derbyclient.jar=lib/derbyclient.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.hibernate4-persistence.classpath}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
